--- a/themes/mytheme/templates/index.html
+++ b/themes/mytheme/templates/index.html
@@ -9,11 +9,11 @@
         
         <div class="hero-content">
           <h1 class="hero-title">
-            Building, Breaking,<br>
+            Writing, Building,<br>
             and Learning.
           </h1>
           <p class="hero-sub">
-            From social science to data engineering. I started this blog to keep track of my progress. A journal for technical notes, career growth, and reflecting on how to build better software systems.
+            A blog for technical notes, career growth, and reflecting on how to build better data- & software systems.
           </p>
           <p class="hero-cta">
             <a class="btn" href="{{ SITEURL }}/blog.html">Read the blog</a>
